# similaridade-textual

./: .gitignore  CMakeLists.txt  exemplo.c  main.c  readme.md  similaridade_textual.c  similaridade_textual.h
rubro_negra/: balanceamento.c  fila_rubro_negra.c  fila_rubro_negra.h  rubro_negra.c  rubro_negra.h
rubro_negra/fila/: fila.c  fila.h
rubro_negra/testes/: balanceamento_teste.c  criacao_teste.c  fila_teste.c  rubro_negra_teste.c  rubro_negra_teste.h  util.c  util.h
rubro_negra_teste/: criacao_teste.c  rubro_negra_teste.c  rubro_negra_teste.h  transformacao_teste.c  util.c  util.h
textos/: Alienista_cap2.txt  MaoLuva.txt
textos/fim/: BrasCubas.txt  BrasCubas_cap1.txt
